@@ -1,3 +1,7 @@
+2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* WebServices.cs: Add a check to not upload files > 100MB.
+
 2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* WebServices.Generated.cs: Regenerated.
